<resources>
    <string name="app_name">Android App Modularization</string>
    <string name="todo">TODO</string>
    <string name="search_by_cocktail_name">Search cocktail by name…</string>
    <string name="order_by_alcoholic">Order by alcoholic</string>
    <string name="order_by_category">Order by category</string>
    <string name="order_by_glass">Order by glass</string>
    <string name="drink_me">Drink ME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="filter_drink_by">Filter Drink by</string>
    <string name="instructions">Instructions :</string>
    <string name="load_data">Load data …</string>
    <string name="str_info">%1$s • %2$s • %3$s</string>
    <string name="no_data_showing">No data showing…</string>
    <string name="title_test_feature">Test Feature</string>
    <string name="go_to_new_module">Go to new module</string>
    <string name="go_to_graphql_api">Go to graphql API</string>
    <string name="install_feature">Install Feature</string>
    <string name="want_to_install_feature">Do you want to download test feature?</string>
</resources>